--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitcoach</title>
     <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script>
 </head>
 <body>
     <header>
@@ -22,6 +23,23 @@
                     </li>
                 </ul>
                 <div class="menu-btn"></div>
+            </div>
+            <div class="check-box">
+                <input type="checkbox" id="icon">
+                <label for="icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+                <div id="hamburger-menu">
+                    <ul>
+                        <li><a href="#">menu</a></li>
+                        <li><a href="#">menu</a></li>
+                        <li><a href="#">menu</a></li>
+                        <li><a href="#">menu</a></li>
+                        <li><a href="#">menu</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
